# Ocaml-CS131-24f-ShanghaiTech

./: .gitignore
hw1/: .gitignore  .ocamlinit  Makefile  README.md  dune-project  submit_zip_contents.txt
hw1/.devcontainer/: Dockerfile
hw1/doc/: hw1-hellocaml.rst
hw1/test/: dune  gradedtests.ml  studenttests.ml
hw2/: .gitignore  .ocamlinit  Makefile  README.md  dune-project  submit_zip_contents.txt
hw2/.devcontainer/: Dockerfile  devcontainer.json
hw2/test/: dune  gradedtests.ml  studenttests.ml
hw3/: Makefile  README.md  dev_note.md  dune-project  submit_zip_contents.txt
hw3/llprograms/: example.ll  studenttests.ll
hw3/output/: test.s  test_1.s
hw3/test/: dune  gradedtests.ml  studenttests.ml
hw4/: .gitignore  Makefile  README.md  dune-project  submit_zip_contents.txt
hw4/.devcontainer/: Dockerfile
hw4/hw4programs/: studenttests.oat
hw4/test/: dune  gradedtests.ml  progasts.ml  studenttests.ml
hw5/: .merlin  Makefile  README.md  submit_zip_contents.txt
hw5/hw5programs/: studenttest.oat  tc_eq1.oat  tc_eq2.oat
hw5/test/: dune  gradedtests.ml  studenttests.ml  testlib.ml
hw6/: .gitignore  .merlin  Makefile  PerformanceExperiments.xlsx  README.md  a_baseline-O1.out  a_baseline.out  a_better-O1.out  a_better.out  a_clang-O1.out  a_clang.out  a_greedy-O1.out  a_greedy.out  run_experiments.sh  submit_zip_contents.txt
hw6/.devcontainer/: Dockerfile
hw6/hw5programs/: poem.oat  tc_struct_null_field.oat  tc_subtyping7.oat  tc_subtyping8.oat  tc_subtyping9.oat
hw6/llprograms/: funptr.ll
hw6/test/: dune  gradedtests.ml
(+40 files in other folders)
