(env
 (dev
  (flags
   (:standard -g -w "+a-4-7-9-26-27-29-30-32..42-44-45-48-50-60-66..70")
   ))) 

(library
  (name studenttests)
  (modules studenttests)
  (libraries gradedtests util x86 ll llbackend))

(library
 (name gradedtests)
 (modules
   gradedtests
; project libraries
 )
 (libraries util x86 ll llbackend))
